# coordination-layer

./: .gitignore  GOVERNANCE.md  PR_CHECKLIST.md  README.md  pyproject.toml  start.sh
.github/workflows/: break-tests.yml  c10-tests.yml  c11-tests.yml  c12-tests.yml  c13-tests.yml  c7-tests.yml  c9-tests.yml  phase10-time-skew.yml  phase4-smoke.yml  phase5-breakability.yml  phase7-runtime-fault-injection.yml  phase8-environment-variance.yml  phase9-resource-starvation.yml
branches/: upstack-coord-v2.md
certgen/: CONTRACT.md  README.md  generate.py
certgen/tests/: test_certgen.py
coord-v2/: C6-CONTRACT-FULL.md  CONTRACT.md
coord_v2/: __init__.py
ct-runtime/: API_CONTRACT.md
docs/: BREAK_TEST_CHECKLIST.md  C13_TECH_BRIEF.md  PHASE4_CONTROLLED_CHAOS.md  rationale.md
governance/: C10_FREEZE_CHECKLIST.md  C11_FREEZE_CHECKLIST.md  C13_STRESS_REPORT_20260119.md  C6-GOVERNANCE-CHECKLIST.md  C9_FREEZE_CHECKLIST.md  Phase_4_to_6_Validation_Log.md  certgen_v1_seal.md  phase10_time_skew_plan.md  phase5_branch_policy.md  phase5_breakability_matrix.md  phase7_runtime_fault_injection_plan.md  phase9_resource_starvation_plan.md  rules_v1_seal.md
llm-cli/: llm.py
model-layer/: .make_break  .make_c10  .make_c11  .make_c12  .make_c13  .make_c9  C10-FREEZE.md  C10-PR-COMMENT.txt  C10-PR-SIGNOFF.md  C11-FREEZE.md  C11-PR-SIGNOFF.md  C11-RUNBOOK.md  C12-FREEZE.md  C12-PR-SIGNOFF.md  C13-FREEZE.md  C13-PR-SIGNOFF.md  C9-FREEZE.md  C9-PR-SIGNOFF.md  Makefile
rules/: match_rules.py  resolve_outcome.py
tests/: test_llm_json_mode.py  test_llm_profile.py  test_llm_sessions.py
(+208 files in other folders)
