[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coordination-model-layer"
version = "1.0.0"
description = "Deterministic execution orchestrator and executor"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["model-layer"]
include = ["model_layer*"]
